# acord

./: .editorconfig  .gitattributes  .gitignore  .readthedocs.yaml  .replit  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_handler.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
acord/: Bot.py  __init__.py  __main__.py  client.py  enums.py  errors.py  payloads.py  utils.py
acord/bases/: __init__.py  components.py  embeds.py  file.py  integrations.py  intents.py  mentions.py  mixins.py  permissions_overwrite.py  presence.py  voice.py
acord/client/: __init__.py  client.py  client.pyi  handler.py  ratelimiter.py  shard.py
acord/core/: abc.py  coreABC.py  decoders.py  heartbeat.py  helpers.py  http.py  ratelimiter.py  respDecoders.py  voice.py
acord/models/: __init__.py  application.py  attachment.py  audit_logs.py  emoji.py  guild.py  guild_sched_event.py  guild_template.py  integrations.py  interaction.py  invite.py  member.py  message.py  partials.py  roles.py  sticker.py  team.py  user.py
acord/rest/: __init__.py  abc.py  rest.py  server.py
acord/voice/: core.py  opus.py  udp.py
acord/webhooks/: connection.py  main.py  methods.py  types.py  webhook.py
docs/: conf.py
docs/api/: models.rst
docs/extensions/: attributetable.py  jinja.py
docs/source/: conf.py  events.rst  index.rst
examples/: getting-started.py  guess.py
examples/REST/: raw.py  rest-api-obj.py  servers.py
examples/akrgs/: args.py  kwargs.py
(+118 files in other folders)
