[tool.poetry]
name = "acord"
version = "0.1.0"
description = "An API Wrapper for Discord"
authors = ["acord <admin@mechakaren.xyz>"]
license = "GNU License"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
